Fixed input overlapping heading for log in page

--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
 main {
@@ -99,50 +99,58 @@ a:hover {
 
 }
 
+.wrapper.active .form-box h2 {
+    transform: translateY(-40px);
+}
+
 .wrapper .form-box{
     width: 100%;
     padding: 40px;
-
-}
-
-.wrapper .form-box.login{
-    transition: transform .18s ease;
     transform: translateX(0);
 }
 
-.wrapper.active .form-box.login{
-    transition: none;
+.wrapper .form-box.login {
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login {
     transform: translateX(-400px);
 }
 
-.wrapper .form-box.register{
+.wrapper .form-box.register {
     position: absolute;
-    transition: none;
     transform: translateX(400px) ;
 }
 
-.wrapper.active .form-box.register{
+.wrapper.active .form-box.register {
     transition: transform .18s ease;
     transform: translateX(0);
 }
 
-.form-box h2{
+.wrapper.active .form-box .input-box {
+    transform: translateY(-40px);
+}
+
+.form-box h2 {
     font-size: 2em;
     color: #162938;
     text-align: center;
+    transform: translateY(0);
 }
 
-.input-box{
+.input-box {
     position: relative;
     width: 100%;
     height: 50px;
     border-bottom: 2px solid #162938;
     margin: 30px 0;
+    transform: translateY(0);
+    transition: transform 0.18s ease; /* Add transition for the heading */
 }
 
-.input-box label{
+.input-box label {
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 5px;
     transform: translateY(-50%);
     font-size: 1em;
